srcs/yaml/ftps.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  ports:
  - port: 21
    protocol: TCP
    name: ftps
  - port: 21000
    name: ftps-local
    protocol: TCP
  selector:
    app: ftps
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
  labels:
    app: ftps
spec:
  selector:
    matchLabels:
      app: ftps
  template:
    metadata:
      labels:
        app: ftps
    spec:
      containers:
      - name: ftps
        image: ftpsimg:1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 21
          hostPort: 21
        - containerPort: 21000
          hostPort: 21000
        volumeMounts:
          - name: ftps-persistent-storage
            mountPath: /ftp/ftp-admin
      volumes:
      - name: ftps-persistent-storage
        persistentVolumeClaim:
          claimName: ftps-pv-claim
