srcs/yaml/influxDB.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxDB
  labels:
    app: influxDB
spec:
  type: NodePort
  ports:
    - port: 8086
      nodePort: 8086
      protocol: TCP
      name: http
  selector:
    app: influxDB
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxDB
  labels:
    app: influxDB
spec:
  selector:
    matchLabels:
      app: influxDB
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: influxDB
    spec:
      containers:
      - image: influxdbimg:1.0
        name: influxDB
        ports:
        - containerPort: 8086
          name: influxDB
        volumeMounts:
          - name: influxDB-persistent-storage
            mountPath: /var/lib/influxDB
      volumes:
      - name: influxDB-persistent-storage
        persistentVolumeClaim:
          claimName: influxDB-pv-claim
