srcs/yaml/phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  type: NodePort
  ports:
    - port: 5000
      nodePort: 5000
      protocol: TCP
      name: http
  selector:
    app: phpmyadmin
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: phpmyadmin
        tier: frontend
    spec:
      containers:
      - image: phpmyadminimg:1.0
        name: phpmyadmin
        ports:
        - containerPort: 5000
          name: phpmyadmin
